# VAgent

./: .gitignore  README.md  default.nix  flake.nix  meson.build
src/: Agent.vala  App.vala  Background.vala  Dialog.vala  agent.vala  background.vala  kagent.gresource.xml  main.vala  meson.build  style.css  window.blp  window.vala
src/ui/: dialog.blp  style.css
